--- a/frontend/src/assets/styles/Signin.css
+++ b/frontend/src/assets/styles/Signin.css
@@ -4,10 +4,23 @@
     background-repeat: no-repeat;
     background-position: right center;
     background-size: auto 100%;
-    }
+}
     
     @media (min-width: 1025px) {
     .h-custom-2 {
     height: 100%;
     }
-    }
+}
+
+.offscreen {
+    position: absolute;
+    left: -9999px;
+}
+
+.errmsg {
+    background-color: lightpink;
+    color: firebrick;
+    font-weight: bold;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
